dashboard-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  annotations:
    cert-manager.io/cluster-issuer: __VKP_CLUSTER_ISSUER__
spec:
  ingressClassName: __GLASS_INGRESS_CLASS__
  rules:
    - host: console.__GLASS_CLUSTER_URL__
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: kubernetes-dashboard
                port:
                  number: 80
  tls:
    - secretName: kubernetes-dashboard-tls
      hosts:
        - console.__GLASS_CLUSTER_URL__
